--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.Complete{
+  color: red;
+  text-decoration: line-through;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
